wk/wk/01-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wk
  namespace: wk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.29.8 # nginx:???-alpine
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              memory: "16Mi"
              cpu: "10m"
            limits:
              memory: "64Mi"
              cpu: "100m"
          readinessProbe:
            httpGet:
              path: /.well-known/matrix/client
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /.well-known/matrix/client
              port: http
            initialDelaySeconds: 10
            periodSeconds: 15
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: static-config
              mountPath: /usr/share/nginx/html/.well-known/
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf

      volumes:
        - name: static-config
          configMap:
            name: nginx-cfg
            items:
              - key: matrix-client
                path: matrix/client
              - key: matrix-server
                path: matrix/server
              - key: security
                path: security.txt
        - name: nginx-config
          configMap:
            name: nginx-cfg
            items:
              - key: default.conf
                path: default.conf
