wk/wk/02-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: wk
  namespace: wk
spec:
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
      targetPort: http
