wk/wk/03-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-ing
  namespace: wk
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`polarys.im`) && PathPrefix(`/.well-known/`)
      priority: 110
      services:
        - name: wk
          port: 80
